add trip-messages endpoint
